--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: circleci/golang:1.14
 
-    working_directory: /go/src/github.com/eatonphil/gosql
+    working_directory: /go/src/github.com/imneov/gosql
     steps:
       - checkout
 
